[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://asset/image/crosshair004.png" type="Texture" id=2]
[ext_resource path="res://P38.tscn" type="PackedScene" id=3]
[ext_resource path="res://blood_overlay_by_dnatoxic_d1xgudw.png" type="Texture" id=4]
[ext_resource path="res://Levels/Main/ControlUI.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Animation" id=4]
resource_name = "Pain"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/BloodOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Hand/P38:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Hand/P38:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.0402334, -0.116149 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/Camera/BloodOverlay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.18
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Hand/P38:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0343583, 0.170119 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 10.124, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Hand/P38:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0343583, 0.170119 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.0402334, -0.116149 ), Vector3( 0, -0.0326926, -0.0929908 ), Vector3( 0, -0.0402334, -0.116149 ) ]
}

[node name="Player" type="KinematicBody" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
far = 250.0

[node name="Crosshair" type="TextureRect" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 608.0
margin_top = 328.0
margin_right = -608.0
margin_bottom = -328.0
rect_scale = Vector2( 0.995776, 1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="BloodOverlay" type="TextureRect" parent="Head/Camera"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandLoc" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.261189, -0.122331, -0.434161 )

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.261189, -0.122331, -0.434161 )

[node name="P38" parent="Head/Hand" instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.0402334, -0.116149 )

[node name="Muzzle" type="Spatial" parent="Head/Hand/P38"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0510279, 0.0247244, -0.238327 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pain = SubResource( 4 )
anims/RESET = SubResource( 3 )
anims/fire = SubResource( 2 )

[node name="ControlUI" parent="." instance=ExtResource( 6 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_down" from="ControlUI/Movement/DownPad" to="." method="_on_DownPad_button_down"]
[connection signal="button_up" from="ControlUI/Movement/DownPad" to="." method="_on_DownPad_button_up"]
[connection signal="button_down" from="ControlUI/Movement/LeftPad" to="." method="_on_LeftPad_button_down"]
[connection signal="button_up" from="ControlUI/Movement/LeftPad" to="." method="_on_LeftPad_button_up"]
[connection signal="button_down" from="ControlUI/Movement/RightPad" to="." method="_on_RightPad_button_down"]
[connection signal="button_up" from="ControlUI/Movement/RightPad" to="." method="_on_RightPad_button_up"]
[connection signal="button_down" from="ControlUI/Movement/UpPad" to="." method="_on_UpPad_button_down"]
[connection signal="button_up" from="ControlUI/Movement/UpPad" to="." method="_on_UpPad_button_up"]
[connection signal="button_down" from="ControlUI/VBoxContainer/ShootButton" to="." method="_on_ShootButton_button_down"]
[connection signal="button_up" from="ControlUI/VBoxContainer/ShootButton" to="." method="_on_ShootButton_button_up"]
[connection signal="button_down" from="ControlUI/VBoxContainer/JumpButton" to="." method="_on_JumpButton_button_down"]
[connection signal="button_up" from="ControlUI/VBoxContainer/JumpButton" to="." method="_on_JumpButton_button_up"]
[connection signal="button_down" from="ControlUI/VBoxContainer/RunButton" to="." method="_on_RunButton_button_down"]
[connection signal="button_up" from="ControlUI/VBoxContainer/RunButton" to="." method="_on_RunButton_button_up"]

[editable path="ControlUI"]
